--- a/.env
+++ b/.env
@@ -3,6 +3,6 @@
 # NODE_ENV = development
 # SERVER_PORT = 4040
 # MONGOOSE_DEBUG = false
-# JWT_SECRET = 0a6b944d-d2fb-46fc-a85e-0295c986cd9f
+# JWT_SECRET = 204e9800998ecf-1d8cd98f00b205e-BkHRpmgX7
 # MONGO_HOST = mongodb://localhost:27017/mean
 # MONGO_PORT = 27017
